--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
     height: 100%;
   }
 
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
   @layer base {
     :root {
       --background: 0 0% 100%;
